apps/modes/home/traefik-auth/outpost-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-home-forward-auth-outpost
  namespace: authentik
  labels:
    app.kubernetes.io/instance: traefik-home-forward-auth-outpost
    app.kubernetes.io/name: authentik-outpost
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: traefik-home-forward-auth-outpost
      app.kubernetes.io/name: authentik-outpost
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: traefik-home-forward-auth-outpost
        app.kubernetes.io/name: authentik-outpost
    spec:
      containers:
        - name: proxy
          image: ghcr.io/goauthentik/proxy:2026.5.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
            - name: https
              containerPort: 9443
              protocol: TCP
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
