apps/modes/home/traefik-auth/outpost-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-home-forward-auth-outpost
  namespace: authentik
  labels:
    app.kubernetes.io/instance: traefik-home-forward-auth-outpost
    app.kubernetes.io/name: authentik-outpost
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: traefik-home-forward-auth-outpost
    app.kubernetes.io/name: authentik-outpost
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: http
    - name: https
      port: 9443
      protocol: TCP
      targetPort: https
