apps/modes/home/traefik-auth/outpost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-home-forward-auth-outpost
  namespace: authentik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: home.def4alt.com
      http:
        paths:
          - path: /outpost.goauthentik.io/
            pathType: Prefix
            backend:
              service:
                name: traefik-home-forward-auth-outpost
                port:
                  name: http
    - host: photos.def4alt.com
      http:
        paths:
          - path: /outpost.goauthentik.io/
            pathType: Prefix
            backend:
              service:
                name: traefik-home-forward-auth-outpost
                port:
                  name: http
    - host: pihole.def4alt.com
      http:
        paths:
          - path: /outpost.goauthentik.io/
            pathType: Prefix
            backend:
              service:
                name: traefik-home-forward-auth-outpost
                port:
                  name: http
